# rover_RYCSV

./: CMakeLists.txt  package.xml
config/: joint_names_Rover_RYCSV.yaml  parameters.yaml
launch/: display.launch  gazebo.launch  sec_proyect.launch
meshes/: Caja.STL
scripts/: TF_node.py  class_TF.py  class_control_caja.py  class_control_dir_ruedas.py  class_control_motores.py  class_control_path_coord.py  class_controlador_polar.py  class_lecture_key.py  class_model.py  controlador_node.py
urdf/: gps.gazebo.xacro  kinect.gazebo.xacro  lidar.gazebo.xacro  rover_RYCSV.csv  rover_RYCSV.urdf  rover_RYCSV.urdf.xacro
