<package format="2">
  <name>rover_RYCSV</name>
  <version>1.0.0</version>

  <description>
    <p>URDF Description package for rover_RYCSV</p>
    <p>This package contains configuration data, 3D models and launch files
for rover_RYCSV robot</p>
  </description>

  <author>Jesús Caballero</author>
  <maintainer email="jdcaballeroco@unal.edu.co" />

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <export>
    <architecture_independent />
  </export>
</package>